--- a/public/index.html
+++ b/public/index.html
@@ -16,47 +16,31 @@
     <meta itemprop="name" content="WebRTC code samples">
     <meta name="mobile-web-app-capable" content="yes">
     <meta id="theme-color" name="theme-color" content="#ffffff">
-
     <base target="_blank">
-
     <title>Peer connection: audio only</title>
-
-    <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
-    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../../../css/main.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-
 </head>
 
 <body>
 
 <div id="container">
 
-    <div id="audio">
-        <div>
-            <div class="label">Local audio:</div>
-            <audio id="audio1" autoplay controls muted></audio>
-        </div>
-        <div>
-            <div class="label">Remote audio:</div>
-            <audio id="audio2" autoplay controls></audio>
-        </div>
+    <video controls autoplay></video>
+    <div>
+        <div class="label">Kullanıcı Adı</div>
+        <input type="text" id="username" disabled>
     </div>
 
     <div id="buttons">
-        <select id="codecPreferences" disabled>
-            <option selected value="">Default</option>
-        </select>
+        <div class="label">Kimi Arayacaksınız?</div>
+        <input type="text" id="toUsername">
         <button id="callButton">Call</button>
         <button id="hangupButton">Hang Up</button>
     </div>
-</div>
-<hr>
-<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="js/main.js"></script>
-<script src="../../../js/third_party/graph.js"></script>
 
-<script src="../../../js/lib/ga.js"></script>
+</div>
+
+<hr>
+<script src="js/peerjs.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
